<resources>
    <string name="app_name">AMC Cinema</string>
    <string name="enter_film">Film:</string>
    <string name="add_details">Add</string>
    <string name="description">Description:</string>
    <string name="dateText">Date:</string>
    <string name="up_coming_events">NOTICES</string>
    <string name="searchViewHint">Enter Film Name</string>
    <string name="filmName">Minority Reports</string>
    <string name="login_text">Login</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_forgot_password_text">Forgot password? Click Here</string>
    <string name="register_name_text">Username</string>
    <string name="register_text">Register</string>
    <string name="already_registered_text">Already Registered? Sign in Here</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="edit_details">Edit</string>
    <string name="delete_details">Delete</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="Phone">Phone Number</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="filmadd">ADD</string>
    <string name="filmupdate">UPDATE</string>
    <string name="filmdelete">DELETE</string>
    <string name="filmsearch">SEARCH</string>
    <string name="filmview">View</string>
    <string name="filmname">Film Name</string>
    <string name="filmRole1">Role1</string>
    <string name="filmRole2">Role 2</string>
    <string name="filmRole3">Role 3</string>
    <string name="filmRole4">Role 4</string>
    <string name="filmphoto1">Photo 1</string>
    <string name="filmphoto2">Photo 2</string>
    <string name="filmphoto3">Photo 3</string>
    <string name="filmphoto4">Photo 4</string>
    <string name="filmCharacters">Main Roles</string>
    <string name="filmBooking">Booking</string>
    <string name="ranking">1.5</string>
    <string name="sampleDate">2019/08/20</string>
    <string name="showTime">10.30</string>
    <string name="seats">250</string>
    <string name="sample_description_text">Lorem Ipsum is\nsimply dummy text\nof the printing and\ntypesetting industry.</string>
    <string name="enter_film_name_text">Enter Film Name</string>
    <string name="enter_role_1_text">Enter Role 1</string>
    <string name="enter_role_2_text">Enter Role 2</string>
    <string name="enter_role_3">Enter Role 3</string>
    <string name="enter_role_4_text">Enter Role 4</string>
    <string name="filmEDIT">Edit</string>
    <string name="login_as_an_admin_button_text">Login</string>
    <string name="film_maintain">Maintain Film Details.</string>
    <string name="filmdirector">Enter Director</string>
    <string name="fimdirectedby">Directed By</string>
    <string name="filmdetailsummary_show">Show summary</string>
    <string name="filmView">View All</string>
    <string name="btnSelect">Select</string>
    <string name="btnSave">Save</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="seatequantity">Seats</string>
    <string name="seattype">Seate Type</string>
    <string name="confirmbooking">Confirm Booking</string>
    <string-array name="seattype">
        <item>Balcony</item>
        <item>ODI</item>
        <item>Box</item>
    </string-array>
    <string name="viewbooking">View Booking</string>
    <string name="notice">Notice</string>
    <string name="add">ADD</string>
    <string name="enter_the_message">Enter the Message</string>
    <string name="updatebooking">Update Booking</string>
    <string name="deletebooking">Delete Booking</string>
    <string name="updateid">ID</string>
    <string name="gotofavorite">Go to Favourite</string>
    <string name="film_name">Film Name</string>
    <string name="description1">Description</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="seats1">Seats</string>
    <string name="addDetails">Add</string>
    <string name="no_films_found">No Films Found</string>
    <string name="no_notice_found">No Notice Found</string>
    <string name="one_more_step">One More Step</string>
    <string name="film_name">Film Name</string>
    <string name="rank">Rank</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="seats2">Seats</string>
    <string name="note">Note</string>
    <string name="description1">Description</string>
    <string name="textview">TextView</string>
    <string name="book">Book</string>
    <string name="need_to_register_click_here">Need to Register? Click Here</string>
    <string name="message">Message</string>
    <string name="update">Update</string>
    <string name="no_films_found">No Films Found</string>
    <string name="amc_cinema">AMC Cinema</string>
    <string name="message">Message</string>
    <string name="obc">OBC</string>


</resources>
