<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".film_details_maintain">


    <LinearLayout
        android:id="@+id/id111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@drawable/opaciy"
        android:paddingBottom="50dp">

        <LinearLayout
            android:id="@+id/id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80sp"
                android:text="@string/film_maintain"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                tools:text="@string/film_maintain" />

            <EditText
                android:id="@+id/idtxtFilmName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="15dp"
                android:alpha="0.9"
                android:background="@drawable/opaciy"
                android:hint="@string/filmname"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:text="@string/enter_film_name_text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/idtxtRole1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:alpha="0.9"
                android:autofillHints=""
                android:background="@drawable/opaciy"
                android:hint="@string/filmRole1"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/idtxtRole2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:alpha="0.9"
                android:background="@drawable/opaciy"
                android:hint="@string/filmRole2"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/idtxtRole3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:alpha="0.9"
                android:background="@drawable/opaciy"
                android:hint="@string/filmRole3"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/idtxtRole4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:alpha="0.9"
                android:background="@drawable/opaciy"
                android:hint="@string/filmRole4"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/idtxtDirector"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:alpha="0.9"
                android:background="@drawable/opaciy"
                android:hint="@string/filmdirector"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnimage1"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/filmphoto1"
                android:textColor="@color/black"
                android:background="@drawable/opaciy"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/btnimage2"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/filmphoto2"
                android:textColor="@color/black"
                android:background="@drawable/opaciy"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnimage3"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/filmphoto3"
                android:textColor="@color/black"
                android:background="@drawable/opaciy"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnimage4"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/filmphoto4"
                android:textColor="@color/black"
                android:background="@drawable/opaciy"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />
            <Button
                android:id="@+id/idbtnAdd"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border"
                android:text="@string/filmadd"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/idbtnview"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border"
                android:text="@string/filmView"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"

                />

            <Button
                android:id="@+id/idbtnUpdate"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border"
                android:text="@string/filmupdate"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/idbtnDelete"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border"
                android:text="@string/filmdelete"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>
