<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeAdminDisplayNotices">

    <TextView
        android:id="@+id/textViewDisplayDate"
        android:layout_width="188dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text=""
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDate2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toEndOf="@+id/textViewDate2"
        app:layout_constraintTop_toTopOf="@+id/textViewDate2" />

    <TextView
        android:id="@+id/textViewDisplayDescription"
        android:layout_width="206dp"
        android:layout_height="136dp"
        android:text=""
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textViewDisplayDate"
        app:layout_constraintTop_toTopOf="@+id/textViewDescription2" />

    <TextView
        android:id="@+id/textViewDate2"
        android:layout_width="99dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/dateText"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpComingEvents2" />

    <TextView
        android:id="@+id/textViewDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate2" />

    <TextView
        android:id="@+id/textViewUpComingEvents2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/up_coming_events"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/btnColor"
        android:text="@string/delete_details"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewDisplayDescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayDescription" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/btnColor"
        android:text="@string/edit_details"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewDisplayDescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>